--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,7 @@
 ---
-title: "blog"
+title: "Posts"
+image: statics/blog_image.jpg
+description-meta: "Blog about Data, curiosities, learning and technology."
 listing:
   contents: posts
   sort: "date desc"
