--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,7 @@
 ---
-title: "Posts"
+title: "Yet Another Data Blog"
+description: "A blog about data science, learning and technology by Tales Gomes"
+image: statics/social.jpg
 listing:
   contents: posts
   sort: "date desc"
@@ -10,7 +12,6 @@ listing:
 page-layout: full
 title-block-banner: false
 comments: false
-include-in-header: meta.html 
 ---
 
 
