--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,9 @@
 ---
 title: "Yet Another Data Blog"
 description: "A blog about data science, learning and technology by Tales Gomes"
-image: statics/social.jpg
+image: social.jpg
+open-graph: true
+twitter-card: true
 listing:
   contents: posts
   sort: "date desc"
@@ -12,7 +14,6 @@ listing:
 page-layout: full
 title-block-banner: false
 comments: false
-include-in-header: meta.html
 ---
 
 
