--- a/index.qmd
+++ b/index.qmd
@@ -2,8 +2,16 @@
 title: "Yet Another Data Blog"
 description: "A blog about data science, learning and technology by Tales Gomes"
 image: social.jpg
-open-graph: true
-twitter-card: true
+open-graph:
+    title: "Yet Another Data Blog"
+    description: "A blog about data science, learning and technology by Tales Gomes"
+    image: "https://blog-talesgomes.netlify.app/social.jpg"
+twitter-card:
+  creator: "@talesgomes27"
+  title: "Yet Another Data Blog"
+  description: "A blog about data science, learning and technology by Tales Gomes"
+  image: "https://blog-talesgomes.netlify.app/social.jpg"
+  card-style: "summary_large_image"
 listing:
   contents: posts
   sort: "date desc"
