--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,17 @@
 title: "Yet Another Data Blog"
 description: "A blog about data science, learning and technology by Tales Gomes"
 image: social.jpg
+twitter-card: 
+    title: "Yet Another Data Blog"
+    description: "A blog about data science, learning and technology by Tales Gomes"
+    card-style: summary_large_image
+    image: "https://blog-talesgomes.netlify.app/social.jpg"
+    creator: "@talesgomes27"
+open-graph: 
+  title: "Yet Another Data Blog"
+  description: "A blog about data science, learning and technology by Tales Gomes"
+  image: "https://blog-talesgomes.netlify.app/social.jpg"
+  site-name: "Yet Another Data Blog"
 listing:
   contents: posts
   sort: "date desc"
@@ -12,7 +23,6 @@ listing:
 page-layout: full
 title-block-banner: false
 comments: false
-include-in-header: meta.html
 ---
 
 
