update meta data

--- a/index.qmd
+++ b/index.qmd
@@ -2,17 +2,8 @@
 title: "Yet Another Data Blog"
 description: "A blog about data science, learning and technology by Tales Gomes"
 image: social.jpg
-twitter-card: 
-    title: "Yet Another Data Blog"
-    description: "A blog about data science, learning and technology by Tales Gomes"
-    card-style: summary_large_image
-    image: "https://blog-talesgomes.netlify.app/social.jpg"
-    creator: "@talesgomes27"
-open-graph: 
-  title: "Yet Another Data Blog"
-  description: "A blog about data science, learning and technology by Tales Gomes"
-  image: "https://blog-talesgomes.netlify.app/social.jpg"
-  site-name: "Yet Another Data Blog"
+twitter-card: true
+open-graph: true
 listing:
   contents: posts
   sort: "date desc"
