--- a/404.qmd
+++ b/404.qmd
@@ -1,6 +1,7 @@
 ---
 title: Page Not Found
 comments: false
+image: 404.jpg
 ---
 
 The page you requested cannot be found (perhaps it was moved or renamed).
