--- a/posts/bellabeat/index.qmd
+++ b/posts/bellabeat/index.qmd
@@ -471,11 +471,12 @@ Fazendo um paralelo entre as duração do sono e o média de batimentos cardíac
 
 
 sleep_data |>
-  select(-c(weight_kg, bmi)) |> 
-  drop_na() |>
+  select(range_sleep, heartrate) |>
+  drop_na(range_sleep) |>
   ggplot(aes(x = range_sleep, y = heartrate, color = range_sleep)) +
-  geom_violin(width=1.4) +
-  geom_boxplot(width=0.1, alpha=0.2) +
+  geom_violin() +
+  #geom_boxplot() +
+  geom_jitter(alpha=0.2) +
   scale_color_viridis_d(aes(label = "Frequência cardíaca média"))+
   ggpubr::theme_pubclean() +
   labs(
@@ -498,11 +499,16 @@ Comparando a média de horas dormidas com o índice de massa corporal médio vem
 #| mensage: false
 
 sleep_data |>
-  drop_na() |>
+  select(range_sleep, bmi) |>
+  drop_na(range_sleep) |>
   ggplot(aes(x = range_sleep, y = bmi, color = range_sleep)) +
-  geom_violin(width=1.4) +
-  geom_boxplot(width=0.1, alpha=0.2) +
+  #geom_violin(width=1.4) +
+  #geom_boxplot(width=0.1, alpha=0.2) +
+  #geom_boxplot() +
+  geom_violin() +
+  geom_jitter(alpha=0.2) +
   scale_color_viridis_d(aes(label = "Indice de massa corporal"))+
+  scale_y_continuous(limits = c(20, 30), breaks = c(20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30)) +
   ggpubr::theme_pubclean() +
   labs(
     x = NULL,
