--- a/404.qmd
+++ b/404.qmd
@@ -7,3 +7,6 @@ image: 404.jpg
 The page you requested cannot be found (perhaps it was moved or renamed).
 
 You may want to try searching to find the page's new location.
+
+
+![The page you requested cannot be found](404.jpg).
